  to trust default CA certificates. Closes #2473.
- Add `--test-config` option which can be used to test a configuration file
  before trying to use it in a live broker. Closes #2521.
- Print messages in mosquitto_passwd when adding/updating passwords.
  Closes #2544.
- Add support for PUID/PGID environment variables for setting the user/group
  to drop privileges to. Closes #2441.

Plugins / plugin interface:
- Add persist-sqlite plugin.
- Add mosquitto_client() function for retrieving a client struct if that
  client is connected.
- Add MOSQ_ERR_PLUGIN_IGNORE to allow plugins to register basic auth or acl
  check callbacks, but still act as though they are not registered. A plugin
  that wanted to act as a blocklist for certain usernames, but wasn't carrying
  out authentication could return MOSQ_ERR_PLUGIN_IGNORE for usernames not on
  its blocklist. If no other plugins were configured, the client would be
  authenticated. Using MOSQ_ERR_PLUGIN_DEFER instead would mean the clients
  would be denied if no other plugins were configured.
- Add `mosquitto_client_port()` function for plugins.
- Add MOSQ_EVT_CONNECT, to allow plugins to know when a client has
  successfully authenticated to the broker.
- Add connection-state example plugin to demonstrate MOSQ_EVT_CONNECT.
- Plugins on non-Windows platforms now no longer make their symbols globally
  available, which means they are self contained.
- Add support for delayed basic authentication in plugins.
- Plugins using the MOSQ_EVT_MESSAGE callback can now return
  MOSQ_ERR_QUOTA_EXCEEDED to have the message be rejected. MQTT v5 clients
  using QoS 1 or 2 will receive the quota-exceeded reason code in the
  corresponding PUBACK/PUBREC.
- MOSQ_EVT_TICK is now passed to plugins when `per_listener_settings` is true.
- The dynamic security plugin now supports `%c` and `%u` patterns for
  substituting client id and username respectively, in all ACLs except for
  subscribeLiteral and unsubscribeLiteral.